Optimise the RKRGST